# ai-embryo

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  Level6_测试报告.md  Level7_测试报告.md  ORGANISM_SPEC.md  README.md  README_CN.md  TECHNICAL_DOCUMENTATION.md  config.yaml  dev_progress_0820.md  docker-compose.yml  pyproject.toml  server.py
ai_embryo/: __init__.py  cell.py  config_manager.py  embryo.py  evolution.py  evolution_llm.py  exceptions.py  fitness.py  genome.py  organism.py  organism_package.py  registry.py
ai_embryo/cells/: __init__.py  discovery_cell.py  llm_cell.py  tool_cell.py  (+2 more)
config/: state_memory_cell_config.yaml  state_memory_cell_modular_config.yaml
examples/: analyst.genome.yaml  creative.genome.yaml
futurembryo/: __init__.py  pyproject.toml
futurembryo/adapters/: __init__.py  base_adapter.py  fastgpt_adapter.py  user_profile_adapter.py
futurembryo/cells/: __init__.py  llm_cell.py  mention_processor_cell.py  mind_cell.py  state_memory_cell.py  tool_cell.py
futurembryo/core/: __init__.py  cell.py  config.py  context_architecture.py  context_builder.py  exceptions.py  mcp_client.py  pipeline.py  state.py  tool_config.py  tool_registry.py  user_models.py
futurembryo/dna/: __init__.py  cell_factory.py  embryo_dna.py  exceptions.py  genes.py  life_grower.py
tests/: temp_delete.py  test_async_fix.py  test_basic.py  test_core.py  test_core_improvements.py  test_evolution_llm.py  test_examples_upgrade.py  test_mind_rule.py  test_organism_package.py  test_real_llm.py  test_stage2.py  test_state_memory_cell_adapter.py  test_tool_registry_v2.py  upgrade_examples.py
tests_v2/: test_core.py
web/: index.html
(+53 files in other folders)
